# Modular-Haskell-GUI

./: Actions.hs  Buffer.hs  Events.hs  Events.hs-boot  ExampleGUI.hs  GUI.hs  JSON.hs  Main.hs  Properties.hs  Server.hs  Tokens.hs  Types.hs  Widgets.hs  index.html  protocol.txt  webgui.cabal
Client/: index.html  input.xml
Client/core/: application.js  application.js~  builder.js  cursor.js  enums.js  eventmanager.js  eventmanager.js~  screen.js  windowmanager.js
Client/transmission/: connection.js  transmission.js
Client/util/: adjustment.js  element.js  events.js  overlay.js  signaldispatcher.js  types.js  util.js
Client/widgets/: abstractslider.js  abstractwindow.js  alignment.js  aspectframe.js  bin.js  box.js  button.js  buttonbox.js  calendar.js  checkbutton.js  container.js  dialog.js  entry.js  fixed.js  frame.js  image.js  label.js  lineedit.js  mainwindow.js  menu.js  menubar.js  menuitem.js  misc.js  paned.js  paned.js~  progressbar.js  radiobutton.js  range.js  scale.js  scrollarea.js  scrollbar.js  scrolledwindow.js  scrolledwindow.js~  separator.js  slider.js  spinner.js  statusbar.js  togglebutton.js  tooltip.js  widget.js  (+1 more)
Documentation/: index.php
Documentation/template/: footer.tpl
Events/: Protocol.hs
Paper/: paper.bib  paper.tex
Properties/: Internal.hs  Properties.hs  Properties.hs-boot  Props.hs  Props.hs-boot  Protocol.hs
Resources/: build.php  config.rb
Resources/source/: base.scss  reset.scss
Server/: Internal.hs  Raw.hs  Websocket.hs
Theme/: build.php
Widgets/: Internal.hs  New.hs  Properties.hs  Protocol.hs  Widgets.hs
data/: compile.sh
data/Theme/: config.rb
src/: Main.hs  SnapExample.hs
(+66 files in other folders)
